--- a/ScrapingRealEstatePropertyDataFromCentury21/Century21.ipynb
+++ b/ScrapingRealEstatePropertyDataFromCentury21/Century21.ipynb
@@ -22,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "r = requests.get(\"https://pythonhow.com/real-estate/rock-springs-wy/LCWYROCKSPRINGS/\")\n",
@@ -32,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "soup=BeautifulSoup(c, \"html.parser\")"
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -213,24 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://pythonhow.com/real-estate/rock-springs-wy/LCWYROCKSPRINGS/t=0&s=0.html\n",
-      "https://pythonhow.com/real-estate/rock-springs-wy/LCWYROCKSPRINGS/t=0&s=10.html\n",
-      "https://pythonhow.com/real-estate/rock-springs-wy/LCWYROCKSPRINGS/t=0&s=20.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = []\n",
     "base_url = (\"https://pythonhow.com/real-estate/rock-springs-wy/LCWYROCKSPRINGS/t=0&s=\")\n",
     "for page in range(0,int(page_nr)*10,10):\n",
-    "    print(base_url + str(page) +\".html\")\n",
+    "#     print(base_url + str(page) +\".html\")\n",
     "    r = requests.get(base_url+str(page)+\".html\")\n",
     "    c = r.content\n",
     "    soup = BeautifulSoup(c,\"html.parser\")\n",
@@ -276,301 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'Address': '0 Gateway',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rock Springs, WY 82901',\n",
-       "  'Price': '$725,000'},\n",
-       " {'Address': '1003 Winchester Blvd.',\n",
-       "  'Area': None,\n",
-       "  'Beds': '4',\n",
-       "  'Full Baths': '4',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rock Springs, WY 82901',\n",
-       "  'Lot Size': '0.21 Acres',\n",
-       "  'Price': '$452,900'},\n",
-       " {'Address': '600 Talladega',\n",
-       "  'Area': '3,154',\n",
-       "  'Beds': '5',\n",
-       "  'Full Baths': '3',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rock Springs, WY 82901',\n",
-       "  'Price': '$396,900'},\n",
-       " {'Address': '3239 Spearhead Way',\n",
-       "  'Area': '3,076',\n",
-       "  'Beds': '4',\n",
-       "  'Full Baths': '3',\n",
-       "  'Half Baths': '1',\n",
-       "  'Locality': 'Rock Springs, WY 82901',\n",
-       "  'Lot Size': 'Under 1/2 Acre, ',\n",
-       "  'Price': '$389,900'},\n",
-       " {'Address': '522 Emerald Street',\n",
-       "  'Area': '1,172',\n",
-       "  'Beds': '3',\n",
-       "  'Full Baths': '3',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rock Springs, WY 82901',\n",
-       "  'Lot Size': 'Under 1/2 Acre, ',\n",
-       "  'Price': '$254,000'},\n",
-       " {'Address': \"1302 Veteran's Drive\",\n",
-       "  'Area': '1,932',\n",
-       "  'Beds': '4',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rock Springs, WY 82901',\n",
-       "  'Lot Size': '0.27 Acres',\n",
-       "  'Price': '$252,900'},\n",
-       " {'Address': '1021 Cypress Cir',\n",
-       "  'Area': '1,676',\n",
-       "  'Beds': '4',\n",
-       "  'Full Baths': '3',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rock Springs, WY 82901',\n",
-       "  'Lot Size': 'Under 1/2 Acre, ',\n",
-       "  'Price': '$210,000'},\n",
-       " {'Address': '913 Madison Dr',\n",
-       "  'Area': '1,344',\n",
-       "  'Beds': '3',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rock Springs, WY 82901',\n",
-       "  'Lot Size': 'Under 1/2 Acre, ',\n",
-       "  'Price': '$209,000'},\n",
-       " {'Address': '1344 Teton Street',\n",
-       "  'Area': '1,920',\n",
-       "  'Beds': '3',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rock Springs, WY 82901',\n",
-       "  'Lot Size': 'Under 1/2 Acre, ',\n",
-       "  'Price': '$199,900'},\n",
-       " {'Address': '4 Minnies Lane',\n",
-       "  'Area': '1,664',\n",
-       "  'Beds': '3',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rock Springs, WY 82901',\n",
-       "  'Lot Size': '2.02 Acres',\n",
-       "  'Price': '$196,900'},\n",
-       " {'Address': '9339 Sd 26900',\n",
-       "  'Area': '2,560',\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rocksprings, TX 78880',\n",
-       "  'Price': '$1,700,000'},\n",
-       " {'Address': 'RR674P13 Hwy 377',\n",
-       "  'Area': '2,000',\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rocksprings, TX 78880',\n",
-       "  'Price': '$1,100,000'},\n",
-       " {'Address': '0 Hwy 41',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rocksprings, TX 78880',\n",
-       "  'Price': '$1,080,000'},\n",
-       " {'Address': '9339 Sd 26900',\n",
-       "  'Area': '2,560',\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rocksprings, TX 78880',\n",
-       "  'Price': '$908,350'},\n",
-       " {'Address': 'CR450 Hwy 377',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rocksprings, TX 78880',\n",
-       "  'Price': '$905,000'},\n",
-       " {'Address': 'Cr 240 Cr 240',\n",
-       "  'Area': '1,398',\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rocksprings, TX 78880',\n",
-       "  'Price': '$695,000'},\n",
-       " {'Address': 'RR674 Hwy 377',\n",
-       "  'Area': '1,738',\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rocksprings, TX 78880',\n",
-       "  'Price': '$605,000'},\n",
-       " {'Address': '9770a Sd 26900',\n",
-       "  'Area': '1,080',\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rocksprings, TX 78880',\n",
-       "  'Price': ' $559,805'},\n",
-       " {'Address': 'Lot17 CR 2630',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rocksprings, TX 78880',\n",
-       "  'Price': '$504,000'},\n",
-       " {'Address': 'Tr12,16 CR 520',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Rocksprings, TX 78880',\n",
-       "  'Price': '$410,000'},\n",
-       " {'Address': '32575 S Shadow Mountain Road',\n",
-       "  'Area': '2,318',\n",
-       "  'Beds': '3',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Price': '$299,900'},\n",
-       " {'Address': '32750 S Shangrila Drive',\n",
-       "  'Area': '2,120',\n",
-       "  'Beds': '3',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Price': '$167,500'},\n",
-       " {'Address': '0000 Black Canyon Highway',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Lot Size': '5 Acres',\n",
-       "  'Price': '$150,000'},\n",
-       " {'Address': '34775 S CHOLLA Drive',\n",
-       "  'Area': '1,220',\n",
-       "  'Beds': '3',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Price': '$129,500'},\n",
-       " {'Address': '33403 S. HA-WA-SI TERRACE',\n",
-       "  'Area': '2,000',\n",
-       "  'Beds': '4',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'BLACK CANYON CITY, AZ 85324',\n",
-       "  'Price': '$129,000'},\n",
-       " {'Address': '34263 S Bertha Street',\n",
-       "  'Area': '2,260',\n",
-       "  'Beds': '5',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Price': '$80,000'},\n",
-       " {'Address': '33160 S Canyon Road',\n",
-       "  'Area': '1,248',\n",
-       "  'Beds': '3',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Price': '$77,900'},\n",
-       " {'Address': '19421 E Todd Evans Road',\n",
-       "  'Area': '1,404',\n",
-       "  'Beds': '3',\n",
-       "  'Full Baths': '2',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Price': '$70,500'},\n",
-       " {'Address': '18688 E AGUA Vista',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Lot Size': '0.7 Acres',\n",
-       "  'Price': '$70,000'},\n",
-       " {'Address': '50600 N Old Black Canyon Road',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Lot Size': '3 Acres',\n",
-       "  'Price': '$67,500'},\n",
-       " {'Address': '20101 E SQUAW VALLEY Road',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Price': '$54,900'},\n",
-       " {'Address': '33259 S Canyon Road',\n",
-       "  'Area': '1,056',\n",
-       "  'Beds': '3',\n",
-       "  'Full Baths': '1',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Price': '$45,600'},\n",
-       " {'Address': '34558 S ROADRUNNER RD',\n",
-       "  'Area': '784',\n",
-       "  'Beds': '2',\n",
-       "  'Full Baths': '1',\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Lot Size': 'Under 1/2 Acre',\n",
-       "  'Price': '$40,000'},\n",
-       " {'Address': '19260 E Scenic Loop Road',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Lot Size': '2.35 Acres',\n",
-       "  'Price': '$30,000'},\n",
-       " {'Address': '19000 E MAREN Avenue',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Lot Size': '2.05 Acres',\n",
-       "  'Price': '$29,000'},\n",
-       " {'Address': '19350 E SAGUARO Drive',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Lot Size': '0.73 Acres',\n",
-       "  'Price': '$28,995'},\n",
-       " {'Address': '20650 E Amethyst Place',\n",
-       "  'Area': None,\n",
-       "  'Beds': None,\n",
-       "  'Full Baths': None,\n",
-       "  'Half Baths': None,\n",
-       "  'Locality': 'Black Canyon City, AZ 85324',\n",
-       "  'Lot Size': '0.31 Acres',\n",
-       "  'Price': '$15,000'}]"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -582,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +808,7 @@
        "36  Black Canyon City, AZ 85324        0.31 Acres     $15,000  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -1127,15 +827,6 @@
    "source": [
     "df.to_csv(\"Output.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
